Implement get bank management

--- a/MarcattoAPI/MarcattoAPI/appsettings.json
+++ b/MarcattoAPI/MarcattoAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //"StoryDb": "Data Source=.; Initial Catalog=GymDb; Integrated security=true;"
+    "MarcattoDb": "Data Source=.;Initial Catalog=MarcattoDb;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
