Improve Add income

--- a/MarcattoAPI/MarcattoAPI/appsettings.json
+++ b/MarcattoAPI/MarcattoAPI/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     //"StoryDb": "Data Source=.; Initial Catalog=GymDb; Integrated security=true;"
+    //"MarcattoDb": "Data Source=sql5030.site4now.net;Initial Catalog=DB_A1A66B_marcatto;User Id=DB_A1A66B_marcatto_admin; Password=abuzafor73azf;"
     "MarcattoDb": "Data Source=.;Initial Catalog=MarcattoDb;Integrated Security=True;"
+
   },
   "Logging": {
     "LogLevel": {
